--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@template-monorepo/monorepo",
+  "name": "template-package-name",
   "version": "0.0.0-alpha.0",
   "workspaces": [
     "apps/*",
